AO3-6748 Keep work body aligned correctly on wide screens in Low Vision Default (#5081)
* AO3-6748 make the stats line wrap

* AO3-6748 wide screen fix

* AO3-6748 the .meta .stats dl block isn't actually needed

* Revert "AO3-6748 the .meta .stats dl block isn't actually needed"

This reverts commit b92e4a3916dfb93afb5fef8240f636cb0786bf8b.

* AO3-6748 change the rule to display:block because that's what it's there for

* AO3-6748 even more reasonable rules that should still behave the same

* AO3-6748 remove the overflow rule

* AO3-6748 ...and the margin 0

* AO3-6748 and text-align

--- a/public/stylesheets/masters/low_vision_default/low_vision_default_site_screen_.css
+++ b/public/stylesheets/masters/low_vision_default/low_vision_default_site_screen_.css
@@ -97,14 +97,9 @@ dd fieldset {
   border: 0;
 }
 
-.meta .stats dl {
-  float: left;
-  margin-top: 0;
-}
-
 .meta .stats dl dd,
 .meta .stats dl dt {
-  float: left;
+  display: inline-block;
 }
 
 textarea,
